syntax = "proto3";

package user;


import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UserId {
  string id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UserList {
  repeated User users = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUser(UserId) returns (User);
  rpc ListUsers(google.protobuf.Empty) returns (UserList);
}
